# routes/api.php
@@ -68,6 +68,7 @@ Route::group(['namespace' => 'API'], function() {
         Route::get('extras/general/{event_id}', 'ExtraController@generalAnswers')->name('extras.general'); 
         Route::get('extras/{event_id}/{user_id}', 'ExtraController@individualAnswers')->name('extras.individual');
         Route::get('extras', 'ExtraController@index')->name('extras.list'); 
+        Route::post('extras', 'ExtraController@index')->name('extras.storeMany');
         Route::post('extras', 'ExtraController@store')->name('extras.store');
         Route::put('extras/{extra}', 'ExtraController@update')->name('extras.update');
         Route::delete('extras/{extra}', 'ExtraController@destroy')->name('extras.delete');
